--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash.throttle": "^4.1.1",
+    "next": "14.2.5",
+    "perfect-cursors": "^1.0.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
