--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "start": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
